--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <hr>
     <h2>Work Experience</h2>
     <ul>
-        <li><a href="./IBM student_students-19 (1).pdf">Attended a month long project management student internship hosted by IBM.</a></li>
+        <li><a href="./IBM student_students-19 (1)_compressed.pdf">Attended a month long project management student internship hosted by IBM.</a></li>
     </ul>
     <hr>
     <h2>Skills</h2>
